; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_xv.c_wait_for_completion.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_xv.c_wait_for_completion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.vo_x11_state*, %struct.xvctx* }
%struct.vo_x11_state = type { i32 }
%struct.xvctx = type { i32, i64 }

@.str = private unnamed_addr constant [58 x i8] c"X11 can't keep up! Waiting for XShm completion events...\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*, i32)* @wait_for_completion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wait_for_completion(%struct.vo* %0, i32 %1) #0 {
  %3 = alloca %struct.vo*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.xvctx*, align 8
  %6 = alloca %struct.vo_x11_state*, align 8
  store %struct.vo* %0, %struct.vo** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.vo*, %struct.vo** %3, align 8
  %8 = getelementptr inbounds %struct.vo, %struct.vo* %7, i32 0, i32 1
  %9 = load %struct.xvctx*, %struct.xvctx** %8, align 8
  store %struct.xvctx* %9, %struct.xvctx** %5, align 8
  %10 = load %struct.vo*, %struct.vo** %3, align 8
  %11 = getelementptr inbounds %struct.vo, %struct.vo* %10, i32 0, i32 0
  %12 = load %struct.vo_x11_state*, %struct.vo_x11_state** %11, align 8
  store %struct.vo_x11_state* %12, %struct.vo_x11_state** %6, align 8
  %13 = load %struct.xvctx*, %struct.xvctx** %5, align 8
  %14 = getelementptr inbounds %struct.xvctx, %struct.xvctx* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %39

17:                                               ; preds = %2
  br label %18

18:                                               ; preds = %34, %17
  %19 = load %struct.vo_x11_state*, %struct.vo_x11_state** %6, align 8
  %20 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %4, align 4
  %23 = icmp sgt i32 %21, %22
  br i1 %23, label %24, label %38

24:                                               ; preds = %18
  %25 = load %struct.xvctx*, %struct.xvctx** %5, align 8
  %26 = getelementptr inbounds %struct.xvctx, %struct.xvctx* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %34, label %29

29:                                               ; preds = %24
  %30 = load %struct.vo*, %struct.vo** %3, align 8
  %31 = call i32 @MP_WARN(%struct.vo* %30, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0))
  %32 = load %struct.xvctx*, %struct.xvctx** %5, align 8
  %33 = getelementptr inbounds %struct.xvctx, %struct.xvctx* %32, i32 0, i32 0
  store i32 1, i32* %33, align 8
  br label %34

34:                                               ; preds = %29, %24
  %35 = call i32 @mp_sleep_us(i32 1000)
  %36 = load %struct.vo*, %struct.vo** %3, align 8
  %37 = call i32 @vo_x11_check_events(%struct.vo* %36)
  br label %18

38:                                               ; preds = %18
  br label %39

39:                                               ; preds = %38, %2
  ret void
}

declare dso_local i32 @MP_WARN(%struct.vo*, i8*) #1

declare dso_local i32 @mp_sleep_us(i32) #1

declare dso_local i32 @vo_x11_check_events(%struct.vo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
